--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
+    "test:unit": "vitest",
     "lint": "vue-tsc --noEmit && eslint -c .eslintrc.js --ext .js,.ts,.vue src/",
     "lint:fix": "npm run lint -- --fix"
   },
   "dependencies": {
+    "@testing-library/vue": "^8.0.1",
+    "vitest": "^1.1.3",
     "axios": "^1.5.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
@@ -27,6 +30,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-prettier-vue": "^5.0.0",
     "eslint-plugin-vue": "^9.17.0",
+    "jsdom": "^23.2.0",
     "postcss": "^8.4.28",
     "prettier": "^3.0.2",
     "tailwindcss": "^3.3.3",
