--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   },
   "dependencies": {
     "@testing-library/vue": "^8.0.1",
-    "vitest": "^1.1.3",
     "axios": "^1.5.0",
+    "vitest": "^1.1.3",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
+    "@types/node": "^20.10.8",
     "@vitejs/plugin-vue": "^4.3.4",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^11.0.3",
@@ -31,6 +32,7 @@
     "eslint-plugin-prettier-vue": "^5.0.0",
     "eslint-plugin-vue": "^9.17.0",
     "jsdom": "^23.2.0",
+    "msw": "^2.0.13",
     "postcss": "^8.4.28",
     "prettier": "^3.0.2",
     "tailwindcss": "^3.3.3",
